@@ -1,3 +1,4 @@
+	* corrected missing const qualifiers on bdecode_node
 	* fix changing queue position of paused torrents (1.1.3 regression)
 	* fix re-check issue after move_storage
 	* handle invalid arguments to set_piece_deadline()
